main page added

--- a/mytemplates/personalpage.html
+++ b/mytemplates/personalpage.html
@@ -51,7 +51,7 @@
             <nav id="sidebar">
                 <ul class="list-unstyled components">
                     <li>
-                        <a href="#"><i class="fas fa-home"></i>&nbspHome</a>
+                        <a href="/index/"><i class="fas fa-home"></i>&nbspHome</a>
                         <a href="#about"><i class="fas fa-briefcase"></i>&nbspAbout</a>      
                         <a href="#facts"><i class="fas fa-tasks"></i>&nbspFacts</a>
                         <a href="#skills"><i class="fas fa-cog"></i>&nbspSkill</a>
@@ -59,7 +59,7 @@
                     </li>
                     <li><a href="#services"><i class="fas fa-image"></i>&nbspAchievement</a></li>
                     <li><a href="#contact"><i class="fas fa-question"></i>&nbspContact</a></li>
-                    <li><a href="#"><i class="fas fa-paper-plane"></i>&nbspLogout</a></li>
+                    <li><a href="/login/"><i class="fas fa-paper-plane"></i>&nbspLogout</a></li>
                 </ul>
             </nav>
         </div>
