--- a/mytemplates/contestpage.html
+++ b/mytemplates/contestpage.html
@@ -1,22 +1,249 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <title>竞赛信息界面</title>
+  <meta charset="utf-8">
+  <meta content="width=device-width, initial-scale=1.0" name="viewport">
+  <title>Contest Subpage</title>
+  <meta content="" name="description">
+  <meta content="" name="keywords">
+
+  <!-- Favicons -->
+  <link href="images/favicon.png" rel="icon">
+
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,600,600i,700,700i" rel="stylesheet">
+
+  <!-- Vendor CSS Files -->
+  <link href="css/bootstrap.min.css" rel="stylesheet">
+  <link href="css/bootstrap-icons.css" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="css/tether.min.css">
+  <link rel="stylesheet" type="text/css" href="css/animate.css">
+  <link rel="stylesheet" type="text/css" href="css/fontstyles_1.css">
+  <link rel="stylesheet" type="text/css" href="css/fontstyles_2.css">
+  <link rel="stylesheet" type="text/css" href="css/iconstyles.css">
+
+  <!-- Main CSS File -->
+  <link rel="stylesheet" type="text/css" href="css/style.min.css">
+  <link href="css/substyle.css" rel="stylesheet">
+ 
 </head>
+
 <body>
-    <div>
-        {{contest.con_id}}
-        {{contest.contest_name}}
-        {{contest.regi_ddl}}
-        {{contest.startdate}}
-        {{contest.enddate}}
-        {{contest.holder}}
-
+  <!-- ======= Header ======= -->
+  <div class="header-master">
+    <div class="header-default">
+        <div class="header-topbar">
+            <div class="container">
+                <div class="header-topbar__contact-info">
+                    <div class="header-topbar__contact-info-item">
+                        <span class="value">Welcome to Contest Sub-Page!</span>
+                    </div>
+                </div>
+                <ul class="nav header-topbar__nav">
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Back to Main</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="ContestSearch.html">Go to Contest</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="Forum.html">Go to Forum</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">My Team</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="../Login/login.html">Sign In/Personal Page</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
     </div>
+</div>
+  <header id="header" class="d-flex align-items-center">
+    <div class="container d-flex flex-column align-items-center">
+      <h1>Contest Name</h1>
+      <div class="countdown d-flex justify-content-center" data-count="2021/4/14">
+        <div>
+          <h3>%d</h3>
+          <h4>Days</h4>
+        </div>
+        <div>
+          <h3>%h</h3>
+          <h4>Hours</h4>
+        </div>
+        <div>
+          <h3>%m</h3>
+          <h4>Minutes</h4>
+        </div>
+        <div>
+          <h3>%s</h3>
+          <h4>Seconds</h4>
+        </div>
+      </div>
 
-    <div>
-        这里应该有个钮直接进组队界面
+      <div class="subscribe">
+        <h4>Find a team to join this contest!</h4>
+        <form method="post">
+          <div class="subscribe-form">
+            <!--input name of team? maybe deleted-->
+            <input type="team" name="" placeholder="Guess a Name?">
+            <!--search button here-->
+            <input type="submit" value="Search!">
+          </div>
+        </form>
+      </div>
     </div>
+  </header><!-- End #header -->
+
+  <main id="main">
+    <!-- ======= About Us Section ======= -->
+    <section id="about" class="about">
+      <div class="container">
+        <div class="row content">
+          <div class="col-lg-6">
+            <h2>Highlight of Contest</h2>
+            <!--Maybe come from the database? short description of contest-->
+            <h3>Some more description here: <br>Voluptatem dignissimos provident quasi corporis voluptates sit assum perenda sruen jonee trave</h3>
+          </div>
+          <div class="col-lg-6 pt-4 pt-lg-0">
+            <p>
+              <!--Maybe come from the database? detailed description of contest-->
+              Detailed description here: ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
+              velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+              culpa qui officia deserunt mollit anim id est laborum
+            </p>
+            <ul>
+              <!--Maybe come from the database? Contest related attributes-->
+              <li><i class="bi bi-check"></i> Contest Certification: ullamco laboris nisi ut aliquip ex ea commodo consequa</li>
+              <li><i class="bi bi-check"></i> Contest Feature: duis aute irure dolor in reprehenderit in voluptate velit</li>
+              <li><i class="bi bi-check"></i> Contest Benefit: ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in</li>
+            </ul>
+            <p class="font-italic">
+              <!--Maybe come from the database? Special note for candidates-->
+              End Note for Candidate Here: lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+              magna aliqua.
+            </p>
+          </div>
+        </div>
+      </div>
+    </section><!-- End About Us Section -->
+
+    <!-- ======= Contact Us Section ======= -->
+    <section id="contact" class="contact">
+      <div class="container">
+        <div class="section-title">
+          <h2>Contact Us</h2>
+        </div>
+        <div class="row justify-content-center">
+          <div class="col-lg-10">
+            <div class="info-wrap">
+              <div class="row">
+                <div class="col-lg-4 info">
+                  <i class="bi bi-geo-alt"></i>
+                  <!--Holder information-->
+                  <h4>Location:</h4>
+                  <p>ABCD EFGH Street<br>IJK LMNO, PQ 123456</p>
+                </div>
+
+                <div class="col-lg-4 info mt-4 mt-lg-0">
+                  <i class="bi bi-envelope"></i>
+                  <!--Holder information-->
+                  <h4>Email:</h4>
+                  <p>info@example.com<br>contact@example.com</p>
+                </div>
+
+                <div class="col-lg-4 info mt-4 mt-lg-0">
+                  <i class="bi bi-phone"></i>
+                  <!--Holder information-->
+                  <h4>Call:</h4>
+                  <p>+1 2345 67890<br>+0 9876 54321</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section><!-- End Contact Us Section -->
+  </main><!-- End #main -->
+
+  <header id="header" class="d-flex align-items-center">
+    <div class="container d-flex flex-column align-items-center">
+      <div class="social-links text-center">
+        <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
+        <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
+        <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
+        <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
+      </div>
+    </div>
+  </header>
+  <div class="footer-default">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-6">
+                <h6 class="footer-default__heading">About</h6>
+                <p>
+                    Morbi convallis bibendum urna ut viverra. Maecenas quis consequat
+                    libero, a feugiat eros. Nunc ut lacinia tortor morbi ultricies laoreet
+                    ullamcorper phasellus semper.
+                </p>
+
+                <a href="#" class="btn btn-outline-secondary btn-get-started">Get Started</a>
+            </div>
+            <div class="col-lg-2 col-md-4">
+                <h6 class="footer-default__heading footer-default__heading--sm">For Candidates</h6>
+                <ul class="list-unstyled">
+                    <li>
+                        <a href="">Join Team</a>
+                    </li>
+                    <li>
+                        <a href="">Register Contest</a>
+                    </li>
+                    <li>
+                        <a href="">Submit Resume</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="col-lg-2 col-md-4">
+                <h6 class="footer-default__heading footer-default__heading--sm">For Holder</h6>
+                <ul class="list-unstyled">
+                    <li>
+                        <a href="">Browse Candidates</a>
+                    </li>
+                    <li>
+                        <a href="">Dashboard</a>
+                    </li>
+                    <li>
+                        <a href="">Add Contest</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="col-lg-2 col-md-4">
+                <h6 class="footer-default__heading footer-default__heading--sm">Other</h6>
+                <ul class="list-unstyled">
+                    <li>
+                        <a href="">Other-1</a>
+                    </li>
+                    <li>
+                        <a href="">Other-2</a>
+                    </li>
+                    <li>
+                        <a href="">Other-3</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div>
+  </div>
+
+  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
+
+  <!-- Vendor JS Files -->
+  <script src="js/bootstrap.bundle.min.js"></script>
+
+  <!-- Template Main JS File -->
+  <script src="js/submain.js"></script>
+
 </body>
 </html>
