--- a/mytemplates/AddPost.html
+++ b/mytemplates/AddPost.html
@@ -7,16 +7,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="css/tether.min.css">
-    <link rel="stylesheet" type="text/css" href="css/animate.css">
-    <link rel="stylesheet" type="text/css" href="css/fontstyles_1.css">
-    <link rel="stylesheet" type="text/css" href="css/fontstyles_2.css">
-    <link rel="stylesheet" type="text/css" href="css//iconstyles.css">
-    <link rel="stylesheet" type="text/css" href="css/select2.min.css">
-    <link rel="stylesheet" type="text/css" href="css/select2_1.min.css">
-    <link rel="stylesheet" type="text/css" href="css/leaflet.css">
-    <link rel="stylesheet" type="text/css" href="css/style-blue.min.css">
+    <link rel="stylesheet" type="text/css" href="/static/Forum&Contest/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="/static/Forum&Contest/css/tether.min.css">
+    <link rel="stylesheet" type="text/css" href="/static/Forum&Contest/css/animate.css">
+    <link rel="stylesheet" type="text/css" href="/static/Forum&Contest/css/fontstyles_1.css">
+    <link rel="stylesheet" type="text/css" href="/static/Forum&Contest/css/fontstyles_2.css">
+    <link rel="stylesheet" type="text/css" href="/static/Forum&Contest/css//iconstyles.css">
+    <link rel="stylesheet" type="text/css" href="/static/Forum&Contest/css/select2.min.css">
+    <link rel="stylesheet" type="text/css" href="/static/Forum&Contest/css/select2_1.min.css">
+    <link rel="stylesheet" type="text/css" href="/static/Forum&Contest/css/leaflet.css">
+    <link rel="stylesheet" type="text/css" href="/static/Forum&Contest/css/style-blue.min.css">
 
     <script>
         var loadFile = function(event) {
@@ -224,10 +224,10 @@
     </div>
 </div>
 
-<script src="js/jquery.min.js"></script>
-<script src="js/tether.min.js"></script>
-<script src="js/bootstrap.min.js"></script>
-<script src="js/dropdown.animate.js"></script>
+<script src="/static/Forum&Contest/js/jquery.min.js"></script>
+<script src="/static/Forum&Contest/js/tether.min.js"></script>
+<script src="/static/Forum&Contest/js/bootstrap.min.js"></script>
+<script src="/static/Forum&Contest/js/dropdown.animate.js"></script>
 
 <script>
     (function () {
@@ -239,9 +239,9 @@
     })(jQuery);
 </script>
 
-<script src="js/leaflet.js"></script>
-<script src="js/select2.min.js"></script>
-<script src="js/master-post-application.js"></script>
+<script src="/static/Forum&Contest/js/leaflet.js"></script>
+<script src="/static/Forum&Contest/js/select2.min.js"></script>
+<script src="/static/Forum&Contest/js/master-post-application.js"></script>
 
 
 </body>
