--- a/mytemplates/ContestSearch.html
+++ b/mytemplates/ContestSearch.html
@@ -9,22 +9,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- BEGIN GLOBAL MANDATORY STYLES -->
-    <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="css/tether.min.css">
-    <link rel="stylesheet" type="text/css" href="css/animate.css">
-    <link rel="stylesheet" type="text/css" href="css/fontstyles_1.css">
-    <link rel="stylesheet" type="text/css" href="css/fontstyles_2.css">
-    <link rel="stylesheet" type="text/css" href="css/iconstyles.css">
+    <link rel="stylesheet" type="text/css" href="/static/Forum&Contest/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="/static/Forum&Contest/css/tether.min.css">
+    <link rel="stylesheet" type="text/css" href="/static/Forum&Contest/css/animate.css">
+    <link rel="stylesheet" type="text/css" href="/static/Forum&Contest/css/fontstyles_1.css">
+    <link rel="stylesheet" type="text/css" href="/static/Forum&Contest/css/fontstyles_2.css">
+    <link rel="stylesheet" type="text/css" href="/static/Forum&Contest/css/iconstyles.css">
     <!-- END GLOBAL MANDATORY STYLES -->
 
-    <link rel="stylesheet" type="text/css" href="css/aos.css">
-    <link rel="stylesheet" type="text/css" href="css/leaflet.css">
-    <link rel="stylesheet" type="text/css" href="css/owl.carousel.min.css">
-    <link rel="stylesheet" type="text/css" href="css/jquery.flexdatalist.min.css">
-    <link rel="stylesheet" type="text/css" href="css/jquery.flexdatalist_1.min.css">
+    <link rel="stylesheet" type="text/css" href="/static/Forum&Contest/css/aos.css">
+    <link rel="stylesheet" type="text/css" href="/static/Forum&Contest/css/leaflet.css">
+    <link rel="stylesheet" type="text/css" href="/static/Forum&Contest/css/owl.carousel.min.css">
+    <link rel="stylesheet" type="text/css" href="/static/Forum&Contest/css/jquery.flexdatalist.min.css">
+    <link rel="stylesheet" type="text/css" href="/static/Forum&Contest/css/jquery.flexdatalist_1.min.css">
 
     <!-- BEGIN THEME STYLES -->
-    <link rel="stylesheet" type="text/css" href="css/style.min.css">
+    <link rel="stylesheet" type="text/css" href="/static/Forum&Contest/css/style.min.css">
     <!-- END THEME STYLES -->
 </head>
 <!-- BEGIN HEAD -->
@@ -98,7 +98,7 @@
         <div class="categories-default__list">
             <div class="categories-default__list-item">
                 <span class="icon iconfont-food-service"></span>
-                <a href="#" class="name">Cooking</a>
+                <a href="#" class="name">Business</a>
             </div>
             <div class="categories-default__list-item">
                 <span class="icon iconfont-construction"></span>
@@ -106,15 +106,15 @@
             </div>
             <div class="categories-default__list-item">
                 <span class="icon iconfont-healthcare"></span>
-                <a href="#" class="name">Hackson</a>
+                <a href="#" class="name">Technology</a>
             </div>
             <div class="categories-default__list-item">
                 <span class="icon iconfont-automotive"></span>
-                <a href="#" class="name">Modeling</a>
+                <a href="#" class="name">Hackson</a>
             </div>
             <div class="categories-default__list-item">
                 <span class="icon iconfont-food-service"></span>
-                <a href="#" class="name">Consulting</a>
+                <a href="#" class="name">Mathematics</a>
             </div>
             <div class="categories-default__list-item">
                 <span class="icon iconfont-construction"></span>
@@ -122,11 +122,11 @@
             </div>
             <div class="categories-default__list-item">
                 <span class="icon iconfont-healthcare"></span>
-                <a href="#" class="name">Data Analysis</a>
+                <a href="#" class="name">Debate</a>
             </div>
             <div class="categories-default__list-item">
                 <span class="icon iconfont-automotive"></span>
-                <a href="#" class="name">Design</a>
+                <a href="#" class="name">Cooking</a>
             </div>
         </div>
 
@@ -203,7 +203,7 @@
                     <table class="table table-responsive">
                         <tr class="listing-recent-jobs__item">
                             <td class="listing-recent-jobs__item-company">
-                                <img src="images/portfolio-1.jpg" alt="" width="50" height="50">
+                                <img src="/static/Forum&Contest/images/portfolio-1.jpg" alt="" width="50" height="50">
                             </td>
                             <td>
                                 <!--For each td, the contest name and limit should be uploaded from database-->
@@ -223,7 +223,7 @@
                         </tr>
                         <tr class="listing-recent-jobs__item">
                             <td class="listing-recent-jobs__item-company">
-                                <img src="images/portfolio-2.jpg" alt="" width="50" height="50">
+                                <img src="/static/Forum&Contest/images/portfolio-2.jpg" alt="" width="50" height="50">
                             </td>
                             <td>
                                 <!--For each td, the contest name and limit should be uploaded from database-->
@@ -243,7 +243,7 @@
                         </tr>
                         <tr class="listing-recent-jobs__item">
                             <td class="listing-recent-jobs__item-company">
-                                <img src="images/portfolio-3.jpg" alt="" width="50" height="50">
+                                <img src="/static/Forum&Contest/images/portfolio-3.jpg" alt="" width="50" height="50">
                             </td>
                             <td>
                                 <!--For each td, the contest name and limit should be uploaded from database-->
@@ -263,7 +263,7 @@
                         </tr>
                         <tr class="listing-recent-jobs__item">
                             <td class="listing-recent-jobs__item-company">
-                                <img src="images/portfolio-4.jpg" alt="" width="50" height="50">
+                                <img src="/static/Forum&Contest/images/portfolio-4.jpg" alt="" width="50" height="50">
                             </td>
                             <td>
                                 <!--For each td, the contest name and limit should be uploaded from database-->
@@ -283,7 +283,7 @@
                         </tr>
                         <tr class="listing-recent-jobs__item">
                             <td class="listing-recent-jobs__item-company">
-                                <img src="images/portfolio-5.jpg" alt="" width="50" height="50">
+                                <img src="/static/Forum&Contest/images/portfolio-5.jpg" alt="" width="50" height="50">
                             </td>
                             <td>
                                 <!--For each td, the contest name and limit should be uploaded from database-->
@@ -303,7 +303,7 @@
                         </tr>
                         <tr class="listing-recent-jobs__item">
                             <td class="listing-recent-jobs__item-company">
-                                <img src="images/portfolio-6.jpg" alt="" width="50" height="50">
+                                <img src="/static/Forum&Contest/images/portfolio-6.jpg" alt="" width="50" height="50">
                             </td>
                             <td>
                                 <!--For each td, the contest name and limit should be uploaded from database-->
@@ -330,7 +330,7 @@
                 <div class="card listing-recent-jobs__spotlight">
                     <img class="card-img-top embed-responsive" src="images/portfolio-0.png" alt="Card image cap">
                     <div class="listing-recent-jobs__spotlight-company-logo">
-                        <img src="images/dropbox-lg.png" alt="Card image cap">
+                        <img src="/static/Forum&Contest/images/dropbox-lg.png" alt="Card image cap">
                     </div>
                     <div class="card-block">
                         <!--Contest joined by my friend, contest name and short description should be uploaded from database-->
@@ -416,10 +416,10 @@
     </div>
 </div>
 
-<script src="js/jquery.min.js"></script>
-<script src="js/tether.min.js"></script>
-<script src="js/bootstrap.min.js"></script>
-<script src="js/dropdown.animate.js"></script>
+<script src="/static/Forum&Contest/js/jquery.min.js"></script>
+<script src="/static/Forum&Contest/js/tether.min.js"></script>
+<script src="/static/Forum&Contest/js/bootstrap.min.js"></script>
+<script src="/static/Forum&Contest/js/dropdown.animate.js"></script>
 
 <script>
     (function () {
@@ -449,11 +449,11 @@
     })(jQuery);
 </script>
 
-<script src="js/jquery.flexdatalist.min.js"></script>
-<script src="js/aos.js"></script>
-<script src="js/owl.carousel.min.js"></script>
-<script src="js/leaflet.js"></script>
-<script src="js/common.js"></script>
+<script src="/static/Forum&Contest/js/jquery.flexdatalist.min.js"></script>
+<script src="/static/Forum&Contest/js/aos.js"></script>
+<script src="/static/Forum&Contest/js/owl.carousel.min.js"></script>
+<script src="/static/Forum&Contest/js/leaflet.js"></script>
+<script src="/static/Forum&Contest/js/common.js"></script>
 
 
 </body>
