--- a/mytemplates/contestpage.html
+++ b/mytemplates/contestpage.html
@@ -9,23 +9,23 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="images/favicon.png" rel="icon">
+  <link href="/static/Forum&Contest/images/favicon.png" rel="icon">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,600,600i,700,700i" rel="stylesheet">
 
   <!-- Vendor CSS Files -->
-  <link href="css/bootstrap.min.css" rel="stylesheet">
-  <link href="css/bootstrap-icons.css" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="css/tether.min.css">
-  <link rel="stylesheet" type="text/css" href="css/animate.css">
-  <link rel="stylesheet" type="text/css" href="css/fontstyles_1.css">
-  <link rel="stylesheet" type="text/css" href="css/fontstyles_2.css">
-  <link rel="stylesheet" type="text/css" href="css/iconstyles.css">
+  <link href="/static/Forum&Contest/css/bootstrap.min.css" rel="stylesheet">
+  <link href="/static/Forum&Contest/css/bootstrap-icons.css" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="/static/Forum&Contest/css/tether.min.css">
+  <link rel="stylesheet" type="text/css" href="/static/Forum&Contest/css/animate.css">
+  <link rel="stylesheet" type="text/css" href="/static/Forum&Contest/css/fontstyles_1.css">
+  <link rel="stylesheet" type="text/css" href="/static/Forum&Contest/css/fontstyles_2.css">
+  <link rel="stylesheet" type="text/css" href="/static/Forum&Contest/css/iconstyles.css">
 
   <!-- Main CSS File -->
-  <link rel="stylesheet" type="text/css" href="css/style.min.css">
-  <link href="css/substyle.css" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="/static/Forum&Contest/css/style.min.css">
+  <link href="/static/Forum&Contest/css/substyle.css" rel="stylesheet">
  
 </head>
 
@@ -89,7 +89,6 @@
           <div class="subscribe-form">
             <!--input name of team? maybe deleted-->
             <input type="team" name="" placeholder="Guess a Name?">
-            <!--search button here-->
             <input type="submit" value="Search!">
           </div>
         </form>
@@ -130,6 +129,52 @@
       </div>
     </section><!-- End About Us Section -->
 
+    <!-- ======= Contest Limit Section ==== -->
+    <section id="" class="contact">
+      <div class="container">
+        <div class="section-title">
+          <h2>Contest Limit</h2>
+        </div>
+        <div class="row justify-content-center">
+            <div class="col-lg-10">
+                <p>Detailed Requirement on Candidates: <br>
+                     <ul>
+                      <!--Maybe come from the database? Contest related attributes-->
+                      <li>Requirement One: ullamco laboris nisi ut aliquip ex ea commodo consequa</li>
+                      <li>Requirement Two: duis aute irure dolor in reprehenderit in voluptate velit</li>
+                      <li>Requirement Three: ullamco laboris nisi ut ex ea commodo consequat. Duis aute irure dolor in reprehenderit in</li>
+                    </ul>
+                </p>
+            </div>
+          <div class="col-lg-10">
+            <div class="info-wrap">
+              <div class="row">
+                <div class="col-lg-4 info">
+                  <i class="bi bi-geo-alt"></i>
+                  <!--Holder information-->
+                  <h4>Registration Deadline:</h4>
+                  <p>xx year xx month xx day</p>
+                </div>
+
+                <div class="col-lg-4 info mt-4 mt-lg-0">
+                  <i class="bi bi-envelope"></i>
+                  <!--Holder information-->
+                  <h4>Start Date</h4>
+                  <p>xx year xx month xx day</p>
+                </div>
+
+                <div class="col-lg-4 info mt-4 mt-lg-0">
+                  <i class="bi bi-phone"></i>
+                  <!--Holder information-->
+                  <h4>End Date</h4>
+                  <p>xx year xx month xx day</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section><!-- End Contact Us Section -->
     <!-- ======= Contact Us Section ======= -->
     <section id="contact" class="contact">
       <div class="container">
@@ -240,10 +285,10 @@
   <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
   <!-- Vendor JS Files -->
-  <script src="js/bootstrap.bundle.min.js"></script>
+  <script src="/static/Forum&Contest/js/bootstrap.bundle.min.js"></script>
 
   <!-- Template Main JS File -->
-  <script src="js/submain.js"></script>
+  <script src="/static/Forum&Contest/js/submain.js"></script>
 
 </body>
 </html>
