--- a/mytemplates/AllCategories.html
+++ b/mytemplates/AllCategories.html
@@ -9,16 +9,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- BEGIN GLOBAL MANDATORY STYLES -->
-    <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="css/tether.min.css">
-    <link rel="stylesheet" type="text/css" href="css/animate.css">
-    <link rel="stylesheet" type="text/css" href="css/fontstyles_1.css">
-    <link rel="stylesheet" type="text/css" href="css/fontstyles_2.css">
-    <link rel="stylesheet" type="text/css" href="css/iconstyles.css">
+    <link rel="stylesheet" type="text/css" href="/static/Forum&Contest/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="/static/Forum&Contest/css/tether.min.css">
+    <link rel="stylesheet" type="text/css" href="/static/Forum&Contest/css/animate.css">
+    <link rel="stylesheet" type="text/css" href="/static/Forum&Contest/css/fontstyles_1.css">
+    <link rel="stylesheet" type="text/css" href="/static/Forum&Contest/css/fontstyles_2.css">
+    <link rel="stylesheet" type="text/css" href="/static/Forum&Contest/css/iconstyles.css">
     <!-- END GLOBAL MANDATORY STYLES -->
 
     <!-- BEGIN THEME STYLES -->
-    <link rel="stylesheet" type="text/css" href="css/style.min.css">
+    <link rel="stylesheet" type="text/css" href="/static/Forum&Contest/css/style.min.css">
     <!-- END THEME STYLES -->
 </head>
 <!-- BEGIN HEAD -->
@@ -221,10 +221,10 @@
     </div>
 </div>
 
-<script src="js/jquery.min.js"></script>
-<script src="js/tether.min.js"></script>
-<script src="js/bootstrap.min.js"></script>
-<script src="js/dropdown.animate.js"></script>
+<script src="/static/Forum&Contest/js/jquery.min.js"></script>
+<script src="/static/Forum&Contest/js/tether.min.js"></script>
+<script src="/static/Forum&Contest/js/bootstrap.min.js"></script>
+<script src="/static/Forum&Contest/js/dropdown.animate.js"></script>
 
 
 
@@ -255,8 +255,6 @@
         });
     })(jQuery);
 </script>
-
-
 
 </body>
 </html>
