--- a/mytemplates/Forum.html
+++ b/mytemplates/Forum.html
@@ -7,13 +7,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="css/tether.min.css">
-    <link rel="stylesheet" type="text/css" href="css/animate.css">
-    <link rel="stylesheet" type="text/css" href="css/fontstyles_1.css">
-    <link rel="stylesheet" type="text/css" href="css/fontstyles_2.css">
-    <link rel="stylesheet" type="text/css" href="css/iconstyles.css">
-    <link rel="stylesheet" type="text/css" href="css/style-blue.min.css">
+    <link rel="stylesheet" type="text/css" href="/static/Forum&Contest/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="/static/Forum&Contest/css/tether.min.css">
+    <link rel="stylesheet" type="text/css" href="/static/Forum&Contest/css/animate.css">
+    <link rel="stylesheet" type="text/css" href="/static/Forum&Contest/css/fontstyles_1.css">
+    <link rel="stylesheet" type="text/css" href="/static/Forum&Contest/css/fontstyles_2.css">
+    <link rel="stylesheet" type="text/css" href="/static/Forum&Contest/css/iconstyles.css">
+    <link rel="stylesheet" type="text/css" href="/static/Forum&Contest/css/style-blue.min.css">
     
     <script>
         function clearBox() {
@@ -56,14 +56,14 @@
     </div>
 <div class="hero-leave-request">
     <div class="container">
-        <h2 class="hero-leave-request__heading">Leave a comment on anything you want!</h2>
-        <p class="hero-leave-request__description">
+        <h2 class="hero-leave-request__heading" style="color:white;">Leave a comment on anything you want!</h2>
+        <p class="hero-leave-request__description" style="color:white;">
             Your contribution will bring you more credits and unlock achievement under certain conditions.
             Select the appropriate post and reviews and comment directly, without hesitation.
         </p>
-        <div class="hero-leave-request__btn-wrap">
+        <div class="hero-leave-request__btn-wrap" style="color:white;">
             <a href="AddPost.html" class="btn btn-primary btn-rounded hero-leave-request__post-job-btn">Start a post</a>
-            <span class="hero-leave-request__offer-description">Visitors will come in 20-30 minutes!</span>
+            <span class="hero-leave-request__offer-description" style="color:white;">Visitors will come in 20-30 minutes!</span>
         </div>
     </div>
 </div>
@@ -383,10 +383,10 @@
     </div>
 </div>
 
-<script src="js/jquery.min.js"></script>
-<script src="js/tether.min.js"></script>
-<script src="js/bootstrap.min.js"></script>
-<script src="js/dropdown.animate.js"></script>
+<script src="/static/Forum&Contest/js/jquery.min.js"></script>
+<script src="/static/Forum&Contest/js/tether.min.js"></script>
+<script src="/static/Forum&Contest/js/bootstrap.min.js"></script>
+<script src="/static/Forum&Contest/js/dropdown.animate.js"></script>
 
 <script>
     (function () {
