--- a/mytemplates/PostPage.html
+++ b/mytemplates/PostPage.html
@@ -7,13 +7,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="css/tether.min.css">
-    <link rel="stylesheet" type="text/css" href="css/animate.css">
-    <link rel="stylesheet" type="text/css" href="css/fontstyles_1.css">
-    <link rel="stylesheet" type="text/css" href="css/fontstyles_2.css">
-    <link rel="stylesheet" type="text/css" href="css/iconstyles.css">
-    <link rel="stylesheet" type="text/css" href="css/style-blue.min.css">
+    <link rel="stylesheet" type="text/css" href="/static/Forum&Contest/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="/static/Forum&Contest/css/tether.min.css">
+    <link rel="stylesheet" type="text/css" href="/static/Forum&Contest/css/animate.css">
+    <link rel="stylesheet" type="text/css" href="/static/Forum&Contest/css/fontstyles_1.css">
+    <link rel="stylesheet" type="text/css" href="/static/Forum&Contest/css/fontstyles_2.css">
+    <link rel="stylesheet" type="text/css" href="/static/Forum&Contest/css/iconstyles.css">
+    <link rel="stylesheet" type="text/css" href="/static/Forum&Contest/css/style-blue.min.css">
 
 </head>
 <body class="">
@@ -55,7 +55,7 @@
             <div class="col-lg-9">
                 <div class="d-flex justify-content-between align-items-center master-profile__item-user">
                     <div class="d-flex">
-                        <img src="images/05.png" alt="" class="rounded-circle master-profile__item-image" width="50" height="50">
+                        <img src="/static/Forum&Contest/images/05.png" alt="" class="rounded-circle master-profile__item-image" width="50" height="50">
                         <div class="d-flex flex-column">
                             <span class="master-profile__item-title">Name of Post</span>
                             <span class="master-profile__item-location"><span class="icon iconfont-map-point-v3"></span>Category</span>
@@ -77,7 +77,7 @@
                                 <span class="master-profile__item-description">Attached Photos below</span>
                             </div>
                             <div class="col-lg-9">
-                                <img src="images/06.png" alt="" class="rounded-circle master-profile__item-image" width="50" height="50">
+                                <img src="/static/Forum&Contest/images/06.png" alt="" class="rounded-circle master-profile__item-image" width="50" height="50">
                             </div>
                             
                         </div>
@@ -136,7 +136,7 @@
                                 </div>
                                 <div class="master-profile-reviews__reply">
                                     <div class="master-profile-reviews__reply-image">
-                                        <img src="images/05.png" alt="" class="rounded-circle embed-responsive">
+                                        <img src="/static/Forum&Contest/images/05.png" alt="" class="rounded-circle embed-responsive">
                                     </div>
                                     <div class="d-flex flex-column">
                                         <span class="master-profile-reviews__reply-title">Post Author</span>
@@ -167,7 +167,7 @@
                                 </div>
                                 <div class="master-profile-reviews__reply">
                                     <div class="master-profile-reviews__reply-image">
-                                        <img src="images/05.png" alt="" class="rounded-circle embed-responsive">
+                                        <img src="/static/Forum&Contest/images/05.png" alt="" class="rounded-circle embed-responsive">
                                     </div>
                                     <div class="master-profile-reviews__reply-wrap">
                                         <div class="form-group">
@@ -203,7 +203,7 @@
                                 </div>
                                 <div class="master-profile-reviews__reply">
                                     <div class="master-profile-reviews__reply-image">
-                                        <img src="images/07.png" alt="" class="rounded-circle embed-responsive">
+                                        <img src="/static/Forum&Contest/images/07.png" alt="" class="rounded-circle embed-responsive">
                                     </div>
                                     <div class="d-flex flex-column">
                                         <span class="master-profile-reviews__reply-title">Andrew</span>
@@ -243,10 +243,10 @@
                     <h5>Share Post</h5>
 
                 <div class="master-profile-controls__social">
-                    <a href="#"><img src="images/facebook-lg.png" width="30" height="30" alt=""></a>
-                    <a href="#"><img src="images/google-plus-lg.png" width="30" height="30" alt=""></a>
-                    <a href="#"><img src="images/linkedin-lg.png" width="30" height="30" alt=""></a>
-                    <a href="#"><img src="images/twitter-lg.png" width="30" height="30" alt=""></a>
+                    <a href="#"><img src="/static/Forum&Contest/images/facebook-lg.png" width="30" height="30" alt=""></a>
+                    <a href="#"><img src="/static/Forum&Contest/images/google-plus-lg.png" width="30" height="30" alt=""></a>
+                    <a href="#"><img src="/static/Forum&Contest/images/linkedin-lg.png" width="30" height="30" alt=""></a>
+                    <a href="#"><img src="/static/Forum&Contest/images/twitter-lg.png" width="30" height="30" alt=""></a>
                 </div>
 
                 <h5>You are excited to post?</h5>
@@ -319,10 +319,10 @@
     </div>
 </div>
 
-<script src="js/jquery.min.js"></script>
-<script src="js/tether.min.js"></script>
-<script src="js/bootstrap.min.js"></script>
-<script src="js/dropdown.animate.js"></script>
+<script src="/static/Forum&Contest/js/jquery.min.js"></script>
+<script src="/static/Forum&Contest/js/tether.min.js"></script>
+<script src="/static/Forum&Contest/js/bootstrap.min.js"></script>
+<script src="/static/Forum&Contest/js/dropdown.animate.js"></script>
 
 <script>
     (function () {
