--- a/mytemplates/register.html
+++ b/mytemplates/register.html
@@ -16,7 +16,7 @@
                 <div class="card card-4">
                     <div class="card-body">
                         <h2 class="title">Registration Form</h2>
-                        <form method="POST" action="/regi/">
+                        <form method="post" action="{% url 'user:registration' %}" />
                             <div class="row row-space">
                                 <div class="col-2">
                                     <div class="input-group">
